[metadata]
name = local_leetcode
description = Solve LeetCode problems locally.
author = Jakob Roithinger
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    local_leetcode
install_requires =
    bs4
    requests
    selenium-requests
python_requires = >=3.9
package_dir =
    = src
zip_safe = no

[options.extras_require]
testing =
    pytest
    pytest-cov
    mypy
    flake8
    tox

; [options.package_data]
; slapping = py.typed

[flake8]
max-line-length = 160